// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleKeyVisual should render correctly 1`] = `
<DocumentFragment>
  <div
    class="m-key-visual key-visual"
  >
    <article
      class="m-key-visual__text"
    >
      <h3
        class="is-centered c-type--h3 m-key-visual__headline"
        itemprop="headline"
      >
        <span
          class="m-key-visual__boxed"
        >
          headline
        </span>
      </h3>
      <p
        class="c-type--p m-key-visual__lead"
        itemprop="description"
      >
        <span
          class="m-key-visual__boxed"
        >
          lead
        </span>
      </p>
    </article>
    <button
      class="c-btn m-key-visual__button--down c-font-icon--chevron-down"
      data-testid="button-key-visual"
      role="button"
      title="btnTitle"
      type="button"
    >
      <span
        class="c-btn__label is-visually-hidden"
      >
        btnLabel
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ModuleKeyVisual should render isWork and isCovered css className 1`] = `
<DocumentFragment>
  <div
    class="m-key-visual--work key-visual"
  >
    <article
      class="m-key-visual__text"
    >
      <h3
        class="is-centered c-type--h3 m-key-visual__headline"
        itemprop="headline"
      >
        <span
          class="m-key-visual__boxed"
        >
          headline
        </span>
      </h3>
      <p
        class="c-type--p m-key-visual__lead"
        itemprop="description"
      >
        <span
          class="m-key-visual__boxed"
        >
          lead
        </span>
      </p>
    </article>
    <button
      class="c-btn m-key-visual__button--down c-font-icon--chevron-down"
      data-testid="button-key-visual"
      role="button"
      title="btnTitle"
      type="button"
    >
      <span
        class="c-btn__label is-visually-hidden"
      >
        btnLabel
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`ModuleKeyVisual should return null if content image is empty 1`] = `<DocumentFragment />`;
